argocd/apps/wallos/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wallos
  name: wallos
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: wallos
