argocd/apps/wallos/vs.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: wallos-vs
# spec:
#   hosts:
#   - wallos.yanello.net
#   gateways:
#   - istio-system/kube-gateway
#   http:
#   - route:
#     - destination:
#         host: wallos
#         port:
#           number: 80
# 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallos-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  ingressClassName: istio
  tls:
    - hosts:
      - wallos.yanello.net
      secretName: istio-system/default-ingress-cert
  rules:
  - host: wallos.yanello.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wallos
            port:
              number: 80
